fix: single page paragraph spacing, callout font and svg size

--- a/assets/scss/components/_callout.scss
+++ b/assets/scss/components/_callout.scss
@@ -9,6 +9,5 @@
 
  p {
   line-height: var(--line-height-loose);
-  font-size: var(--size-40);
  }
 }
